--- a/src/src.fsproj
+++ b/src/src.fsproj
@@ -2,17 +2,20 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Models.fs" />
+    <Compile Include="ThothExtension.fs" />
     <Compile Include="CrosswordCreator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Argu" Version="5.2.0" />
-    <PackageReference Include="FSharp.Data" Version="3.0.0" />
+    <PackageReference Include="Argu" Version="6.2.5" />
+    <PackageReference Include="FSharp.Data" Version="6.4.0" />
+    <PackageReference Include="Thoth.Json.Net" Version="12.0.0" />
   </ItemGroup>
 
 </Project>
